--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,14 +15,14 @@ permissions:
 
 env:
   # Name of module and id separated by a slash
-  INSTANCE: Writerside/p
+  INSTANCE: Writerside/ebaw
   # Replace HI with the ID of the instance in capital letters
-  ARTIFACT: webHelpP2-all.zip
+  ARTIFACT: webHelpEBAW2-all.zip
   # Writerside docker image version
   DOCKER_VERSION: 232.10165.1
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
-  ALGOLIA_ARTIFACT: algolia-indexes-P.zip
+  ALGOLIA_ARTIFACT: algolia-indexes-EBAW.zip
 
 jobs:
   build:
